--- a/resources/sources/main/scss/style.scss
+++ b/resources/sources/main/scss/style.scss
@@ -1511,26 +1511,38 @@ $tourGrid_radius : 5px;
     display: flex;
     align-items: center;
     border-top: 1px solid $bg-04;
+    min-height: 55px;
     position: relative;
     z-index: 103;
     &_price {
         width: 100%;
-        text-align: center;
+        justify-content: center;
         font-family: $font-primary-title;
         font-size: 1.4rem;
         letter-spacing: 0.5px;
         color: $color-price;
     }
+    &_phone {
+        width: 100%;
+        justify-content: center;
+        font-family: $font-primary-title;
+        font-size: 1.4rem;
+        letter-spacing: 0.5px;
+        color: $color-primary;
+    }
     &_textNormal {
         width: 100%;
-        text-align: center;
+        justify-content: center;
         font-family: $font-primary-title;
     }
-    > a, > div {
-        display: flex;
+    &_button {
         flex: 0 0 160px;
         margin-left: 1.5rem;
         justify-content: flex-end;
+    }
+    > a, > div {
+        display: flex;
+        align-items: center;
         h2, h3, h4 {
             font-family: $font-primary-title;
             background: $color-secondary;
@@ -1540,6 +1552,7 @@ $tourGrid_radius : 5px;
             font-size: 1.1rem;
             text-align: center;
             margin: 0;
+            width: 100%;
             &:hover {
                 background: $color-secondary-hover;
             }
@@ -1714,7 +1727,7 @@ $tourGrid_radius : 5px;
             }
             &_title {
                 h2, h3 {
-                    font-size: 1.2rem;
+                    font-size: 1.25rem;
                 }
             }
         }
@@ -1727,7 +1740,7 @@ $tourGrid_radius : 5px;
             &_title {
                 h2, h3 {
                     margin-bottom: 0.25rem !important;
-                    font-size: 1.1rem;
+                    font-size: 1.2rem;
                 }
                 i {
                     margin-top: 0.35rem;
